# blockchain

./: .gitignore  CMakeLists.txt  Makefile  README.md  blockchain.c  blockchain.h  main.c
examples/cryptocurrency/: cryptocurrency.c  cryptocurrency.h  main.c
examples/simple/: main.c
src/: blockchain.c  blockchain.h  main.c
src/util/: linkedlist.c  linkedlist.h
